--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,15 @@
 body {
     font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #333;
 }
 
 h1, h2, h3 {
     text-align: center;
+}
+
+h1, h2 {
+    color: white;
 }
 
 .well {
@@ -21,17 +27,37 @@ label {
 .btn {
     display: block;
     margin: 0 auto;
+    font-size: 18px;
+    min-width: 150px;
 }
 
+/* Cart section */
 #cart {
     display: none;
 }
 
+#cart > h2 {
+    color: #333;
+}
+
+#cart > p,
+#cart > ul {
+    text-align: center;
+}
+
+#cart > p {
+    font-size: 24px;
+}
+
 .size,
-.proteins,
-.veggies,
-.others {
+#proteins-topping,
+#veggies-topping,
+#others-topping {
     text-transform: capitalize;
+}
+
+.buttons {
+    display: flex;
 }
 
 li {
@@ -40,4 +66,5 @@ li {
 
 #total {
     text-align: center;
+    font-size: 20px;
 }
