--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,6 @@
 body {
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #333;
     background-image: url("../img/pizza.jpg");
 }
 
@@ -71,4 +70,21 @@ li {
 #total {
     text-align: center;
     font-size: 20px;
+}
+
+#info {
+    display: none;
+}
+.info-container {
+    background-color: white;
+    border-radius: 5px;
+    padding: 20px;
+}
+
+.validate {
+    margin-bottom: 5px;
+}
+
+.modal {
+    display: none;
 }
